--- a/client/src/app/modules/administration/components/referentials/referential-service-field-type/referential-service-field-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service-field-type/referential-service-field-type.component.html
@@ -38,7 +38,7 @@
             <td>
               <select-service-field-data-type [(model)]="selectedEntity.dataType" label="Type de données"
                 [form]="entityForm" propertyName="dataType" [isMandatory]="true" [isDisabled]="!editMode"
-                (selectionChange)="clearPossibleValues()"></select-service-field-data-type>
+                (onFormChange)="clearPossibleValues()"></select-service-field-data-type>
             </td>
           </tr>
         </table>
