--- a/client/src/app/modules/reporting/components/my-indicators/my-indicators.component.html
+++ b/client/src/app/modules/reporting/components/my-indicators/my-indicators.component.html
@@ -7,24 +7,26 @@
 
   <div class="dashboard-container" fxLayout="row wrap" fxLayoutGap="16px" fxLayoutAlign="start stretch">
     <h2>Indicateurs Objectivés</h2>
-    <ng-container *ngFor="let item of values">
-      <mat-card class="indicator-card pointer" *ngIf="hasKpi(item)" appearance="outlined"
-        (click)="displayDetailedIndicator(item)">
-        <div class="indicator-title">{{ item.indicator.label }}</div>
+    <div style="display: flex;">
+      <ng-container *ngFor="let item of values">
+        <mat-card class="indicator-card pointer" *ngIf="hasKpi(item)" appearance="outlined"
+          (click)="displayDetailedIndicator(item)">
+          <div class="indicator-title">{{ item.indicator.label }}</div>
 
-        <div class="indicator-value" [ngClass]="getValueClass(item)">
-          {{ item.value ? item.value : '' }}
-        </div>
+          <div class="indicator-value" [ngClass]="getValueClass(item)">
+            {{ item.value ? item.value : '' }}
+          </div>
 
-        <div class="indicator-date" [matTooltip]="'Mis à jour le '+formatDateHourFrance(item.indicator.lastUpdate)">
-          {{ item.date | date: 'd MMMM yyyy' }}
-        </div>
+          <div class="indicator-date" [matTooltip]="'Mis à jour le '+formatDateHourFrance(item.indicator.lastUpdate)">
+            {{ item.date | date: 'd MMMM yyyy' }}
+          </div>
 
-        <div class="indicator-meta">
-          <span>{{getIndicatorMetas(item)}} </span>
-        </div>
-      </mat-card>
-    </ng-container>
+          <div class="indicator-meta">
+            <span>{{getIndicatorMetas(item)}} </span>
+          </div>
+        </mat-card>
+      </ng-container>
+    </div>
   </div>
   <div class="dashboard-container" fxLayout="row wrap" fxLayoutGap="16px" fxLayoutAlign="start stretch">
     <h2>Indicateurs meusurés</h2>
