--- a/client/src/app/modules/reporting/components/reporting-add/reporting-add.component.html
+++ b/client/src/app/modules/reporting/components/reporting-add/reporting-add.component.html
@@ -5,7 +5,7 @@
         <table class="full-width">
           <tr>
             <select-reporting-dataset [(model)]="reporting.dataset" label="Jeu de données" [form]="userReportingForm"
-              (selectionChange)="selectDataSet($event,[])" propertyName="dataset" [isMandatory]="true"
+              (onFormChange)="selectDataSet($event,[])" propertyName="dataset" [isMandatory]="true"
               [isDisabled]="false"></select-reporting-dataset>
           </tr>
           <tr>
