--- a/client-myjss/src/app/modules/general/components/contact/contact.component.html
+++ b/client-myjss/src/app/modules/general/components/contact/contact.component.html
@@ -29,8 +29,8 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 pt-2">
 
       <div class="col pb-2">
-        <h4 class="mb-lg-4">Addresse</h4>
-        <p class="fs-lg fw-medium pb-3 mb-3">10 Bd Haussmann, 75009 Paris</p>
+        <h4 class="mb-lg-4">Adresse</h4>
+        <p class="fs-lg fw-medium pb-3 mb-3">10 Bd Haussmann,<br />75009 Paris</p>
       </div>
 
       <div class="col pb-2">
