--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -82,7 +82,7 @@
       </div>
     </div>
 
-    <generic-swiper *ngIf="tendencyPosts && tendencyPosts.length>0" [items]="tendencyPosts" title="Articles à la une">
+    <generic-swiper *ngIf="topPosts && topPosts.length>0" [items]="topPosts" title="Articles à la une">
       <ng-template let-post>
         <div class="h-100">
           <div class="card border-0 bg-tertiary">
