fix minor view bugs

--- a/client-myjss/src/app/modules/general/components/newsletter-subscription/newsletter-subscription.component.html
+++ b/client-myjss/src/app/modules/general/components/newsletter-subscription/newsletter-subscription.component.html
@@ -9,7 +9,7 @@
 </section>
 
 <section class="container pb-5">
-  <div class="row">
+  <div class="row g-5">
     <div class="col-md-6 order-md-1">
       <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/others/Newsletter.png" alt="Image">
     </div>
