--- a/client-myjss/src/app/modules/general/components/demo/demo.component.html
+++ b/client-myjss/src/app/modules/general/components/demo/demo.component.html
@@ -16,8 +16,8 @@
     </div>
     <div class="col-md-7 order-md-2">
       <div class="d-flex flex-column h-100 border-0 rounded-3 pt-5 px-4 px-lg-5">
-        <form class="needs-validation row g-4 " novalidate>
-          <h2 class="h2 pe-xxl-5 me-xl-4 mb-md-0 text-white">Demandez votre démo
+        <form class="needs-validation row g-0 " novalidate>
+          <h2 class="h2 pe-xxl-5 me-xl-4 mb-md-4 text-white">Demandez votre démo
           </h2>
           <div class="col-sm-6">
             <generic-input class="form-control form-control-lg" [(model)]="firstName" label="Prénom*"
@@ -50,7 +50,8 @@
             </div>
           </div>
           <div class="col-12 pt-2">
-            <button class="btn btn-lg btn-primary" type="submit" (click)="getDemoByMail($event)">Demander une
+            <button class="btn btn-lg btn-primary w-100 mb-md-auto mb-5" type="submit"
+              (click)="getDemoByMail($event)">Demander une
               démo</button>
           </div>
         </form>
