--- a/client-myjss/src/app/modules/general/components/prices/prices.component.html
+++ b/client-myjss/src/app/modules/general/components/prices/prices.component.html
@@ -17,8 +17,8 @@
     </div>
     <div class="col-md-7 order-md-2">
       <div class="d-flex flex-column h-100 border-0 rounded-3 pt-5 px-4 px-lg-5">
-        <form class="needs-validation row g-4 " novalidate>
-          <h2 class="h2 pe-xxl-5 me-xl-4 mb-md-0 text-white">Demandez nos tarifs
+        <form class="needs-validation row g-0 " novalidate>
+          <h2 class="h2 pe-xxl-5 me-xl-4 mb-md-4 text-white">Demandez nos tarifs
           </h2>
           <div class="col-sm-6">
             <generic-input class="form-control form-control-lg" [(model)]="firstName" label="Prénom*"
@@ -51,8 +51,8 @@
             </div>
           </div>
           <div class="col-12 pt-2">
-            <button class="btn btn-lg btn-primary w-100" type="submit" (click)="getPricesByMail($event)">Demander une
-              démo</button>
+            <button class="btn btn-lg btn-primary w-100" type="submit" (click)="getPricesByMail($event)">Demandez nos
+              tarifs</button>
           </div>
         </form>
       </div>
