--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -214,7 +214,7 @@
     </generic-swiper>
   </div>
 </section>
-
+<generic-testimonial></generic-testimonial>
 <div class="py-5 my-md-3 my-lg-4 my-xxl-5">
   <newsletter></newsletter>
 </div>
