--- a/client-myjss/src/app/modules/miscellaneous/components/generic-swiper/generic-swiper.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/generic-swiper/generic-swiper.component.html
@@ -20,10 +20,18 @@
       </div>
     </div>
 
-    <swiper-container #genericSwiper class="genericSwiper" init="false">
-      <swiper-slide *ngFor="let item of items" class="pb-5">
-        <ng-container *ngTemplateOutlet="templateRef; context: { $implicit: item }"></ng-container>
-      </swiper-slide>
-    </swiper-container>
+    <div class="row g-0">
+      <div class="col-3 d-lg-block d-none" *ngIf="firstFixedImg">
+        <div class="card border-0" [ngStyle]="{'width.px': slideWidth, 'height.px': maxHeight-48}">
+          <!-- We substract 48px that are always presents as padding bottom for the slides that we dont want for the img -->
+          <img [src]="firstFixedImg" class="card object-fit-cover" alt="Card image">
+        </div>
+      </div>
+      <swiper-container #genericSwiper class="genericSwiper" [ngClass]="{'col-9' : firstFixedImg }" init="false">
+        <swiper-slide *ngFor="let item of items" class="pb-5">
+          <ng-container *ngTemplateOutlet="templateRef; context: { $implicit: item }"></ng-container>
+        </swiper-slide>
+      </swiper-container>
+    </div>
   </div>
 </section>
